# CodeMira

./: .gitignore  CLAUDE.md  ImplementationPlan.md  PiPortingPlan.md  README.md  mira_lineage.md  opencode_touchpoints.md
daemon/: pyproject.toml
daemon/codemira/: config.py  daemon.py  embeddings.py  errors.py  launchd.py  llm.py  opencode_db.py  server.py  systemd.py
daemon/codemira/consolidation/: cluster.py  consolidator.py  handler.py
daemon/codemira/extraction/: chunker.py  compressor.py  context.py  dedup.py  extractor.py  link_classifier.py  transcript.py
daemon/codemira/retrieval/: hub_discovery.py  hubs.py  proactive.py
daemon/codemira/store/: db.py  index.py  manager.py  search.py
daemon/codemira/summarization/: arc.py  handler.py
docs/: code_change_merit_rubric.txt  known-bugs.md  seed_design.md
plugin/: package.json  tsconfig.json
plugin/src/: index.ts  pure.ts
prompts/: arc_summarizer_system.txt  arc_summarizer_user.txt  compression_system.txt  consolidation_system.txt  consolidation_user.txt  entity_extraction_system.txt  entity_extraction_user.txt  extraction_system.txt  extraction_user.txt  link_classification_system.txt  link_classification_user.txt  subcortical_system.txt  subcortical_user.txt
tests/: conftest.py  test_chunker.py  test_concurrency.py  test_consolidation.py  test_dedup_contract.py  test_embeddings.py  test_extraction.py  test_integration.py  test_prompt_template.py  test_retrieval.py  test_search.py  test_server.py  test_store_db.py  test_store_index.py  test_summarization.py  test_transcript.py
(+1 files in other folders)
