[project]
name = "codemira"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "hnswlib>=0.8",
    "sentence-transformers>=3.0",
    "rapidfuzz>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
codemira = "codemira.daemon:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
